<resources>
    <string name="app_name">Blackjack</string>
    <string name="set_up">Blackjack setup</string>
    <string name="dealer_hint">Enter the name of the dealer here</string>
    <string name="dealer_prompt">Enter the name of the dealer</string>
    <string name="dealer_playing">Dealer playing</string>
    <string name="enter">Enter</string>
    <string name="add">Add</string>
    <string name="player_label">Players</string>
    <string name="player_name">Enter the player name</string>
    <string name="dealer_name">Enter the dealer name</string>
    <string name="start_game">Start Game</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
    <string name="none">None</string>
</resources>
