<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#695050">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/card_game_list_view_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/player_label"
            android:id="@+id/label_player"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textSize="24dp"
            android:textColor="@color/card_game_list_view_text"
            android:background="@color/card_game_list_view_background" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/input_box"
            android:layout_gravity="bottom"
            android:inputType="text"
            android:background="@android:color/darker_gray"
            android:textSize="24dp"
            android:textColor="@color/BLACK"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/enterButton"
            android:layout_toRightOf="@+id/player_name"
            android:layout_marginLeft="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/enterButton"
            android:layout_weight="1"
            android:nestedScrollingEnabled="true"
            android:layout_alignParentStart="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:enabled="true" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dealer_playing"
            android:id="@+id/dealerPlay"
            android:background="@color/card_game_list_view_background"
            android:textColor="@color/card_game_list_view_text"
            android:textSize="18sp"
            android:layout_alignParentTop="false"
            android:layout_alignBottom="@+id/enterButton"
            android:layout_toRightOf="@+id/enterButton"
            android:layout_toLeftOf="@+id/game_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dealer_name"
            android:id="@+id/player_name"
            android:textColor="@color/card_game_list_view_text"
            android:textSize="24sp"
            android:background="@color/card_game_list_view_background"
            android:layout_above="@+id/enterButton" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/playerlist"
            android:layout_alignParentTop="false"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="false"
            android:layout_above="@+id/player_name"
            android:visibility="visible"
            android:background="@color/card_game_list_view_background"
            android:layout_alignParentRight="false"
            android:layout_below="@+id/label_player" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game"
            android:id="@+id/game_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</LinearLayout>